Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16560

Quickfix "Convert to Camel Case" gives wrong suggestion for mixed notation

XMLWordPrintable

    • 2b5e1ea62ec084fc4706e2aa8db0ba819b74c4c2 (qt-creator/qt-creator/4.14)

      Call the quickfix "Convert to Camel Case" on the following identifier:

      void mixed_andCamelCase();
      

      The quickfix suggests "mixedAndcamelcase" as replacement, better would be "mixedAndCamelCase".

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            aha_1980 André Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes